--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 TG_BOT_TOKEN=1234:sas
 TG_CHANNEL_ID=@GitHub_FA
-DEEPSEEK_API_KEY=sk-
+DEEPSEEK_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxx
+TRENDING_URL=https://github.com/trending
+MAX_POSTS=1
